--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -45,24 +45,24 @@ library(tidyverse)
 #week16 <- read_csv("/Users/seandube/git/DATA/nfl-big-data-bowl-2021/week16.csv")
 #week17 <- read_csv("/Users/seandube/git/DATA/nfl-big-data-bowl-2021/week17.csv")
 
-#plays <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/plays.csv")
-#week1 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week1.csv")
-#week2 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week2.csv")
-#week3 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week3.csv")
-#week4 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week4.csv")
-#week5 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week4.csv")
-#week6 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week6.csv")
-#week7 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week7.csv")
-#week8 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week8.csv")
-#week9 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week9.csv")
-#week10 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week10.csv")
-#week11 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week11.csv")
-#week12 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week12.csv")
-#week13 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week13.csv")
-#week14 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week14.csv")
-#week15 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week15.csv")
-#week16 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week16.csv")
-#week17 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week17.csv")
+plays <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/plays.csv")
+week1 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week1.csv")
+week2 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week2.csv")
+week3 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week3.csv")
+week4 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week4.csv")
+week5 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week4.csv")
+week6 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week6.csv")
+week7 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week7.csv")
+week8 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week8.csv")
+week9 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week9.csv")
+week10 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week10.csv")
+week11 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week11.csv")
+week12 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week12.csv")
+week13 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week13.csv")
+week14 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week14.csv")
+week15 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week15.csv")
+week16 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week16.csv")
+week17 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week17.csv")
 
 
 
@@ -79,13 +79,15 @@ week1edit <- weeks %>%
   right_join(plays, week1edit, by = c("playId", "gameId")) %>%
   filter(event != "NA")
 
-passstats <- plays %>%
+PassStats <- plays %>%
   select(possessionTeam, yardsToGo, passResult, offensePlayResult) %>%
   rename(Team = possessionTeam, Result = passResult, yardsGained = offensePlayResult) %>%
   group_by(Team, Result) %>%
   summarise(n=n(), TotalYards = sum(yardsGained)) %>%
   rename(ResultCount = n) %>%
   filter(Result != "NA" & Result != "R" & Result != "S") 
+
+
 
   
   
@@ -142,7 +144,7 @@ plot1finished <- plot1final %>%
   select(gameId, playId, event, down, yardsToGo, playDirection, absoluteYardlineNumber, playResult, togo, x, y, firstdown)
 
 write_csv(plot1finished, "plot1finished.csv")
-write_csv(passstats, "passstats.csv")
+write_csv(PassStats, "PassStats.csv")
 
 ```
 
