--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -88,7 +88,9 @@ PassStats <- plays %>%
   filter(Result != "NA" & Result != "R" & Result != "S") 
 
 
-
+CompletionPercentage <- PassStats %>%
+  group_by(Team) %>%
+  summarise(Percentage = (ResultCount / sum(ResultCount)) * 100)
   
   
 
