--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -90,9 +90,9 @@ PassStats <- plays %>%
  
 CompletionPercentage <- PassStats %>%
   group_by(Team) %>%
-  summarise(Percentage = (ResultCount / sum(ResultCount) )* 100, AverageYards = TotalYards / sum(ResultCount)) %>%
-  mutate(`Average Yards/Completion` = round(AverageYards, 2)) %>%
-  mutate(`Completion %` = round(Percentage, 2)) %>%
+  summarise(CompletionRate = (ResultCount / sum(ResultCount) )* 100, AverageYards = TotalYards / sum(ResultCount)) %>%
+  mutate(AverageYards = round(AverageYards, 2)) %>%
+  mutate(CompletionRate= round(CompletionRate, 2)) %>%
   slice(1) %>%
   ungroup() 
 
@@ -206,7 +206,7 @@ NFL1 <- cbind(NFL18, Team=NFLteams)%>%
   select(-`NFL Team`)
 
 Teamstats <- right_join(NFL1,CompletionPercentage , by = "Team") %>%
-  select(Team, W, L, `T`, `Average Yards/Completion`, `Completion %`) %>%
+  select(Team, W, L, `T`, AverageYards, CompletionRate) %>%
   arrange(L)
 
 
