--- a/index.Rmd
+++ b/index.Rmd
@@ -40,7 +40,7 @@ library(grid)
 
 
 ```{r, echo=FALSE, message = FALSE, warning=FALSE}
-plays <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/plays.csv")
+#plays <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/plays.csv")
 plot1 <- read.csv("plot1finished.csv")
 plot2 <- read.csv("plot2finished.csv")
 plot3 <- read.csv("Teamstats.csv")
