--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -205,7 +205,7 @@ NFL <- as.data.frame(NFLteams)
 NFL1 <- cbind(NFL18, Team=NFLteams)%>%
   select(-`NFL Team`)
 
-Location <- c("California", "Louisiana", "Illinois", "Missouri", "California", "Texas", "Massachusetts", "Pennsylvania", "Maryland", "Texas", "Indiana", "Washington", "Minnesota", "Pennsylvania", "Tennessee", "Ohio", "Wisconsin", "Georgia", "North Carolina", "Florida", "Maryland", "New York", "Ohio", "Colorado", "Michigan", "Florida", "New Jersey", "Florida", "New Jersey", "Nevada", "California", "Arizona" )
+Location <- c("CA", "LA", "IL", "MO", " ", "TX", "MA", "PA", "MD", " ", "IN", "WA", "MN", " ", "TN", "OH", "WI", "GA", "NC", "FL", " ", "NY", " ", "CO", "MI", "FL", "NJ", " ", " ", "NV", " ", "AZ" )
 
 
 Teamstats <- right_join(NFL1,CompletionPercentage , by = "Team") %>%
@@ -213,8 +213,9 @@ Teamstats <- right_join(NFL1,CompletionPercentage , by = "Team") %>%
   arrange(L) 
 
 Teamstats2 <- Teamstats %>%
-  cbind(Location)
-
+  cbind(Location)%>%
+  arrange(L) %>%
+  filter(Location != " ")
 
 write_csv(Teamstats, "Teamstats.csv")
 write_csv(Teamstats2, "Teamstats2.csv")
