--- a/index.Rmd
+++ b/index.Rmd
@@ -47,7 +47,7 @@ plot1 <- read.csv("plot1finished.csv")
 plot2 <- read.csv("plot2finished.csv")
 plot3 <- read.csv("Teamstats.csv")
 footballfield <- png::readPNG("footballfield.png")
-PassingStats <- read.csv("PassStats.csv") 
+PassingStats <- read.csv("PassStats.csv")  
 
 
 togo <- c("short", "medium", "long")
@@ -146,7 +146,7 @@ server <- function(input, output) {
     DT::datatable(plot3)
   )
   output$Table_plot <- DT::renderDataTable(
-    DT::datatable(plot2finished)
+    DT::datatable(plot2)
   )   
 }
 
