--- a/index.Rmd
+++ b/index.Rmd
@@ -146,7 +146,7 @@ server <- function(input, output) {
     DT::datatable(plot3)
   )
   output$Table_plot <- DT::renderDataTable(
-    DT::datatable(plot2finished)
+    DT::datatable(plot2)
   )   
 }
 
