--- a/index.Rmd
+++ b/index.Rmd
@@ -46,6 +46,7 @@ library(grid)
 plot1 <- read.csv("plot1finished.csv")
 plot2 <- read.csv("plot2finished.csv") 
 plot3 <- read.csv("Teamstats.csv")
+plot4 <- read.csv("teamstatsmap.csv")
 footballfield <- png::readPNG("footballfield.png")
 PassingStats <- read.csv("PassStats.csv")  
 
@@ -157,6 +158,16 @@ server <- function(input, output) {
 
 
 shinyApp(ui = ui, server = server)
+
+
+
+ggplot(plot4, aes(x = long, y = lat, group = group
+                      , fill = W)) +
+  geom_polygon(color = "white") +
+  theme_void() +
+  coord_fixed(ratio = 1.3) +
+  labs(fill = "Wins per Team Location") +
+  theme(legend.position="bottom")
 
 ```
 
