--- a/index.Rmd
+++ b/index.Rmd
@@ -218,9 +218,9 @@ shinyApp(ui = ui, server = server)
 
 
 ## Our findings
-- compare to patriots
--no correlation between passing and who wins the superbowl
--teams with high completion and total passing yards
+
+ESPN discovered that after comparing the New England Patriots's total passing yards to other teams, we found that other teams had more passing yards. This gave us reason to claim that there is no correlation between total passing yards and who wins the super bowl. We also found that teams with high completion rates did not necessarily have the most passing yards. We also found that teams were most likely to pass on first down, or when the distance to first down was considered long. The plot of passing play outcomes shows that most passes where thrown towards the sidelines. 
+
 
 ## Map of Most Wins per State
 
