--- a/index.Rmd
+++ b/index.Rmd
@@ -183,7 +183,10 @@ ggplot(plot4, aes(x = long, y = lat, group = group
   labs(fill = "Wins per Team Location") +
   theme(legend.position="bottom")
 
-Teamstats2
+Teamstats2 <- Teamstats2 %>%
+  select(-State) 
+
+print(Teamstats2, row.names = FALSE)
 
 ```
 
