--- a/index.Rmd
+++ b/index.Rmd
@@ -220,7 +220,7 @@ shinyApp(ui = ui, server = server)
 
 ## Our findings
 
-ESPN discovered that after comparing the New England Patriots's total passing yards to other teams, we found that other teams had more passing yards. This gave us reason to claim that there is no correlation between total passing yards and who wins the super bowl. We also found that teams with high completion rates did not necessarily have the most passing yards. We also found that teams were most likely to pass on first down, or when the distance to first down was considered long. The plot of passing play outcomes shows that most passes where thrown towards the sidelines. 
+ESPN discovered that after comparing the New England Patriots's total passing yards to other teams, we found that other teams had more passing yards. This gave us reason to claim that there is no correlation between total passing yards and who wins the super bowl. We also found that teams with high completion rates did not necessarily have the most passing yards or wins. We also found that teams were most likely to pass on first down, or when the distance to first down was considered long. The plot of passing play outcomes shows that most passes where thrown towards the sidelines rather than the middle of the field. As the teams moved closer to the endzone, the percentage of passing plays that scored touchdowns increased.
 
 
 
